[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegeo"
version = "0.0.6"
authors = [
  { name="Wanjiang Jacob Zhang", email="zwj1994code@gmail.com" },
]
description = "This is a python package for scraping Telegram data based on geolocation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=1.3.5",
  "geopy~=2.2.0",
  "plotly~=5.10.0",
  "tqdm~=4.64.0",
  "Telethon~=1.24.0",
]