[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegeo"
version = "0.0.9"
authors = [
  { name="Wanjiang Jacob Zhang", email="zwj1994code@gmail.com" },
]
description = "This is a python package for scraping Telegram data based on geolocation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "geopy",
  "plotly",
  "tqdm",
  "Telethon",
]